--- a/lib/pento_web/templates/user_registration/new.html.eex
+++ b/lib/pento_web/templates/user_registration/new.html.eex
@@ -15,6 +15,10 @@
   <%= password_input f, :password, required: true %>
   <%= error_tag f, :password %>
 
+  <%= label f, :username %>
+  <%= text_input f, :username, required: true %>
+  <%= error_tag f, :username %>
+
   <div>
     <%= submit "Register" %>
   </div>
